[package]
name = "probe-client"
version = "2.4.4"
authors = ["KunoiSayami <46131041+KunoiSayami@users.noreply.github.com>"]
edition = "2018"

[dependencies]
anyhow = "1"
clap = "2"
env_logger = "0.9"
gethostname = "0.2"
log = { version = "0.4", features = ["max_level_trace", "release_max_level_debug"] }
reqwest = { version = "0.11", default-features = false, features = ["json", "serde_json", "socks", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1"
serde_json = "1"
systemstat = "0.1"
tokio = { version = "1", features = ["full"] }
toml = "0.5"
uuid = { version = "0.8", features = ["serde", "v4"] }

[profile.release]
opt-level = 3
lto = true
panic = "abort"
